--- a/Recovery/Recovery.csproj
+++ b/Recovery/Recovery.csproj
@@ -71,6 +71,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Lib.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
