--- a/Imperium/Imperium.csproj
+++ b/Imperium/Imperium.csproj
@@ -142,6 +142,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="logo.ico" />
+    <None Include="Resources\rt.png" />
     <None Include="Resources\settings.png" />
     <None Include="Resources\link_connected.png" />
     <None Include="Resources\theme.png" />
