--- a/Imperium/Imperium.csproj
+++ b/Imperium/Imperium.csproj
@@ -86,7 +86,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Garage.cs" />
     <Compile Include="Lib.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
@@ -95,12 +94,8 @@
       <DependentUpon>Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Natives.cs" />
-    <Compile Include="NFunc.cs" />
-    <Compile Include="Outfit.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RPC.cs" />
-    <Compile Include="Tunables.cs" />
     <Compile Include="Variables.cs" />
     <EmbeddedResource Include="Main.resx">
       <DependentUpon>Main.cs</DependentUpon>
@@ -175,6 +170,9 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+  </ItemGroup>
+  <ItemGroup>
+    <WCFMetadata Include="Service References\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it.
